// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css macro composes 1`] = `
.css-1cjz2s1 {
  display: -webkit-box,-moz-box,-ms-flexbox,-webkit-flex,flex;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  -webkit-box-pack: center;
  justify-content: center;
}

<div
  className="css-1cjz2s1"
/>
`;

exports[`css macro composes with objects 1`] = `
.css-1vx1y9j {
  display: flex,block;
  width: 30px;
  height: calc(40vw - 50px);
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  -webkit-box-pack: center;
  justify-content: center;
}

.css-1vx1y9j:hover {
  color: blue;
}

.css-1vx1y9j:after {
  content: " ";
  color: red;
}

@media (min-width: 420px) {
  .css-1vx1y9j {
    color: green;
  }
}

<div
  className="css-1vx1y9j"
/>
`;

exports[`css macro composes with undefined values 1`] = `
.css-1rsyrbq {
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  -webkit-box-pack: center;
  justify-content: center;
}

<div
  className="css-1rsyrbq"
/>
`;

exports[`css macro handles more than 10 dynamic properties 1`] = `
.css-550542 {
  background: white;
  color: black;
  text-decoration: underline;
  display: block;
  border-radius: 3px;
  padding: 25px;
  width: 500px;
  z-index: 100;
  font-size: 18px;
  text-align: center;
  border: solid 1px red;
}

<div
  className="css-550542"
/>
`;

exports[`css macro handles objects 1`] = `
.css-1fe3owl {
  display: flex;
}

<div
  className="css-1fe3owl"
/>
`;
